# PyMajic

./: README.md  pyproject.toml  setup.py
pymajic/: store.py
pymajic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
