[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name="pymajic"
version="1.0.1"
author="Shagbaor Agber"
author_email="dxtlive@gmail.com"
description='PyMajic is a Python package that simplifies working with Django projects by providinconvenient commands for environment management, custom commands, and more.'
long_description = 'file: README.md'
long_description_content_type = 'text/markdown'
url = 'https://github.com/Codewithshagbaor/PyMajic' 
packages=["pymajic"]
install_requires=["Django","requests",]
keywords = ['Django','project management','virtual environment','Django development','utility','command-line tool','workflow optimization','automation',]